Bug 909000 - Make SupportsAzureContentForBackend only return true for backends allowed by the current prefs. r=nrc